--- a/client/package.json
+++ b/client/package.json
@@ -44,5 +44,5 @@
     "postcss": "^8.4.5",
     "tailwindcss": "^3.0.12"
   },
-  "homepage": "http://qwertyuiop888.github.io/react-pages"
+  "homepage": "http://qwertyuiop888.github.io/math"
 }
